src/objects/rh2__Rollup_Helper_Record_Scope__c.object
<CustomObject>
    <fields>
        <fullName>rh2__Encountered_Error_During_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encountered Error During Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Record_Scope__c</fullName>
        <label>Record Scope</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>This setting will override the default record scope for the specified Source object.</description>
    <label>Rollup Helper Record Scope Settings</label>
</CustomObject>